k8s/apps/konoha/ducknet/hastebin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hastebin
  labels:
    app: hastebin
spec:
  selector:
    matchLabels:
      app: hastebin
  strategy:
    #type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hastebin
    spec:
      containers:
      - image: rlister/hastebin
        name: hastebin
        resources:
          requests:
            memory: "30Mi"
            cpu: "50m"
          limits:
            memory: "50Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 7777
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: hastebin
