k8s/apps/konoha/ducknet/hastebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hastebin
spec:
  ports:
  - name: http
    port: 7777
    targetPort: 7777
  selector:
    app: hastebin
