k8s/apps/konoha/ducknet/hastebin/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: hastebin-ingress
spec:
  rules:
  - host: paste.duck.moe
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: hastebin
          servicePort: http
  - host: paste.duck.me.uk
    http: *http_rules
  tls:
  - hosts:
    - paste.duck.moe
    - paste.duck.me.uk
    secretName: hastebin-cert
